remove File from TestRerankBase.java